force-app/main/default/objects/XactlyExpress__XCPaymentRuleTier__c/fields/XactlyExpress__ContestAwardID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__ContestAwardID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>ContestAwardID</label>
    <referenceTo>XactlyExpress__XCContestAward__c</referenceTo>
    <relationshipLabel>XCPaymentRuleTier</relationshipLabel>
    <relationshipName>XCPaymentRuleTier</relationshipName>
    <type>Lookup</type>
</CustomField>