force-app/main/default/objects/XactlyExpress__XCPaymentRuleTier__c/fields/XactlyExpress__Formula__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Formula__c</fullName>
    <label>Formula</label>
    <length>255</length>
    <type>Text</type>
</CustomField>