force-app/main/default/objects/XactlyExpress__XCPaymentRuleTier__c/fields/XactlyExpress__FormulaLong__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__FormulaLong__c</fullName>
    <label>FormulaLong</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>