force-app/main/default/objects/XactlyExpress__XCPaymentRuleTier__c/fields/XactlyExpress__IsAdvFormula__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__IsAdvFormula__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It checks if the formula is defined as advanced</description>
    <label>IsAdvFormula</label>
    <type>Checkbox</type>
</CustomField>