force-app/main/default/objects/XactlyExpress__XCPaymentRuleTier__c/fields/XactlyExpress__PaymentRuleRampID__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__PaymentRuleRampID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PaymentRuleRampID</label>
    <referenceTo>XactlyExpress__XCPaymentRuleRamp__c</referenceTo>
    <relationshipLabel>XCPaymentRuleTier</relationshipLabel>
    <relationshipName>XCPaymentRuleTier</relationshipName>
    <type>Lookup</type>
</CustomField>