force-app/main/default/objects/XactlyExpress__XCPaymentRuleTier__c/fields/XactlyExpress__Value__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Value__c</fullName>
    <label>Value</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>